# ShortVideo

./: README.md
SkVideo/: build.gradle  settings.gradle
SkVideo/app/: build.gradle
SkVideo/app/src/androidTest/java/com/sk/skvideo/: ExampleInstrumentedTest.java
SkVideo/app/src/main/: AndroidManifest.xml
SkVideo/app/src/main/cpp/: CMakeLists.txt  FaceTrack.cpp  FaceTrack.h  native-lib.cpp
SkVideo/app/src/main/java/com/sk/skvideo/: MainActivity.java  PermissionActivity.java
SkVideo/app/src/main/java/com/sk/skvideo/face/: Face.java  FaceTracker.java
SkVideo/app/src/main/java/com/sk/skvideo/filter/: BaseFboFilter.java  BaseFilter.java  BaseFrameFilter.java  BigEyeFilter.java  CameraFilter.java  FilterChain.java  FilterContext.java  RecordFilter.java  ScreenFilter.java
SkVideo/app/src/main/java/com/sk/skvideo/record/: EGLEnv.java  MediaRecorder.java
SkVideo/app/src/main/java/com/sk/skvideo/utils/: CameraHelper.java  Constant.java  ImageUtils.java  OpenGLUtils.java
SkVideo/app/src/main/java/com/sk/skvideo/widget/: CameraRender.java  CameraView.java  RecordButton.java
SkVideo/app/src/main/res/layout/: activity_main.xml  activity_permission.xml
SkVideo/app/src/main/res/raw/: base_frag.frag  base_vert.vert  bigeyes_frag.frag  camera_frag.frag  camera_vert.vert
SkVideo/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
SkVideo/app/src/test/java/com/sk/skvideo/: ExampleUnitTest.java
SkVideo/gradle/wrapper/: gradle-wrapper.properties
